# Situacion-problema-TC1031.602

./: CMakeLists.txt  LogsManager.cpp  LogsManager.h  MenuInterface.cpp  MenuInterface.h  MyLinkedList.h  logsRawVectorizado.txt  main.cpp  programa
src/: LogsManager.cpp  LogsManager.h  main.cpp
